# raven

./: .gitignore  CHANGELOG.md  README.md  README_en.md  README_zh.md  biome.json  eslint.config.js  index.html  lefthook.yml  package-lock.json  package.json  tailwind.config.js  test-plan-2026-05-27.md  test.md  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: product_tech_review_260601.md  test-data.md  test-plan-0621.md  test-plan-260601.md  test-plan-260602.md
docs/superpowers/plans/: 2026-05-18-raven.md
docs/superpowers/specs/: 2026-05-18-raven-design.md
scripts/: check-large-files.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_add_columns.sql  003_add_review_columns.sql  004_add_graph_data.sql  005_add_streak.sql  006_add_goals.sql  007_upgrade_srs.sql  008_add_indexes.sql
src-tauri/src/: commands.rs  credentials.rs  db.rs  error.rs  fsrs.rs  lib.rs  main.rs  repository.rs
src-tauri/src/commands/: export.rs  fsrs.rs  history.rs  learning.rs  mod.rs  models.rs  settings.rs  shared.rs  words.rs
src/components/: ErrorBoundary.tsx  ExerciseCard.tsx  InlineErrorBoundary.tsx  KnowledgeGraph.tsx  Layout.tsx  OnboardingDialog.tsx  PersistentRoutes.tsx  ResultCard.tsx  Sidebar.tsx  SpeakButton.tsx  TextInput.tsx  VocabularySection.tsx  page-states.tsx  progress-bar.tsx
src/components/analytics/: StatCard.tsx
src/hooks/: use-abortable.test.ts  use-abortable.ts  use-add-to-vocabulary.ts  use-analytics.ts  use-audio-player.ts  use-graph-data.ts  use-language-detection.ts  use-latest-ref.ts  use-llm-stream-page.test.ts  use-llm-stream-page.ts  use-phase-machine.test.ts  use-phase-machine.ts  use-read-aloud.ts  use-recording.ts  use-retry-hint.ts  use-stream-chat.test.ts  use-stream-chat.ts  use-theme.tsx
src/hooks/use-analytics/: index.ts  use-exercise-analytics.ts  use-listening-analytics.ts  use-recent-sessions.ts  use-speaking-analytics.ts  use-writing-analytics.ts
src/lib/: analytics.ts  cache.test.ts  cache.ts  db.ts  fetch-utils.test.ts  fetch-utils.ts  history-storage.ts  model-storage.ts  parse-utils.test.ts  parse-utils.ts  practice-options.ts  schemas.ts  task-status.test.ts  task-status.ts  type-config.test.ts  type-config.tsx  utils.ts  vocab-storage.ts  word-utils.ts
src/pages/: AnalyticsPage.tsx  CorrectPage.tsx  DashboardPage.tsx  ExercisePage.test.tsx  ExercisePage.tsx  HistoryDetailPage.tsx  HistoryPage.tsx  ListeningPage.tsx  ReadingPage.tsx  ReviewPage.test.tsx  ReviewPage.tsx  SettingsPage.tsx  SpeakingPage.tsx  SpeedTrainerPage.tsx  TranslatePage.tsx  VocabularyPage.tsx
src/prompts/: correct.ts  exercise.ts  index.ts  listening.ts  reading.ts  speaking.ts
src/services/: asr.ts  llm.test.ts  llm.ts  notifications.ts  tts.ts
src/test/: mocks.ts
src/types/: index.ts
