[package]
name = "raven"
version = "1.0.0"
description = "Raven — 英语学习助手"
authors = ["you"]
edition = "2021"

[lib]
name = "raven_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-http = { version = "2", default-features = false, features = ["stream", "native-tls"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
csv = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tauri-plugin-dialog = "2.7.1"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }
